[package]
name = "appleiir"
version = "0.1.0"
authors = ["Isaac Lozano <109lozanoi@gmail.com>"]

[dependencies]
r6502 = { git = "https://github.com/Isaac-Lozano/r6502" }
env_logger = "0.3.5"
log = "0.3.5"
getopts = "0.2"

[dependencies.sdl2]
version = "0.27"
default-features = false
features = ["image"]
